--- a/QR_Decomposition_Algorithms.ipynb
+++ b/QR_Decomposition_Algorithms.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMVGXTY2EE/AYOSX+9fQtJH",
+      "authorship_tag": "ABX9TyOQuOS4EEVVk0P7RO420GDp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 10,
       "metadata": {
         "id": "wXHO6HsKQgN-"
       },
@@ -38,6 +38,77 @@
         "\n",
         "# generate matrix A with random int values\n",
         "A = np.array(np.random.randint (0, 10, (3, 3)), dtype=np.float64)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## QR by Gram-Schmidt"
+      ],
+      "metadata": {
+        "id": "q_nnxZMm6QWn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def gram_schmidt(A):\n",
+        "    m, n  = A.shape\n",
+        "    Q = np.zeros((m, n))\n",
+        "    Q[:, 0] = A[:, 0] / np.linalg.norm(A[:, 0], 2)\n",
+        "    for i in range(1, n):\n",
+        "        Q[:, i] = A[:, i]\n",
+        "        for j in range(0, i):\n",
+        "            inner = np.dot(Q[:, j].T, Q[:, i])\n",
+        "            Q[:, i] = Q[:, i] - np.dot(inner, Q[:, j])\n",
+        "        Q[:, i] = Q[:, i] / np.linalg.norm(Q[:, i], 2)\n",
+        "    return Q\n",
+        "\n",
+        "def qr_gs(A):\n",
+        "    m, n = A.shape\n",
+        "    Q = gram_schmidt(A)\n",
+        "    R = np.zeros((m, n))\n",
+        "    for i in range(0, n):\n",
+        "        R[i, i] = np.dot(Q[:, i], A[:, i])\n",
+        "        for j in range(0, i):\n",
+        "            R[j, i] = np.dot(Q[:, j], A[:, i])\n",
+        "    return Q, R\n",
+        "\n",
+        "Q, R = qr_gs(A)\n",
+        "print(\"A: \")\n",
+        "print(A)\n",
+        "print(\"Q: \")\n",
+        "print(Q)\n",
+        "print(\"R: \")\n",
+        "print(np.round(R, 3))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zJlRIX_U6U6N",
+        "outputId": "599d3dfe-33ff-4e7d-86b6-d9f06426aa88"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A: \n",
+            "[[4. 4. 9.]\n",
+            " [4. 3. 2.]\n",
+            " [3. 4. 6.]]\n",
+            "Q: \n",
+            "[[ 0.62469505  0.06941056  0.77777778]\n",
+            " [ 0.62469505 -0.64204769 -0.44444444]\n",
+            " [ 0.46852129  0.76351617 -0.44444444]]\n",
+            "R: \n",
+            "[[6.403 6.247 9.683]\n",
+            " [0.    1.406 3.922]\n",
+            " [0.    0.    3.444]]\n"
+          ]
+        }
       ]
     },
     {
@@ -84,26 +155,26 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "0946c3ed-5d7b-4fb3-d1ee-9625907bc51a"
+        "outputId": "a5db9ec9-a461-4a9b-9359-419c913b2d3d"
       },
-      "execution_count": 5,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "A: \n",
-            "[[2. 0. 9.]\n",
-            " [9. 1. 7.]\n",
-            " [0. 0. 9.]]\n",
+            "[[4. 4. 9.]\n",
+            " [4. 3. 2.]\n",
+            " [3. 4. 6.]]\n",
             "Q: \n",
-            "[[ 0.21693046 -0.97618706  0.        ]\n",
-            " [ 0.97618706  0.21693046  0.        ]\n",
-            " [ 0.          0.          1.        ]]\n",
+            "[[ 0.62469505  0.06941056  0.77777778]\n",
+            " [ 0.62469505 -0.64204769 -0.44444444]\n",
+            " [ 0.46852129  0.76351617 -0.44444444]]\n",
             "R: \n",
-            "[[ 9.22   0.976  8.786]\n",
-            " [-0.     0.217 -7.267]\n",
-            " [ 0.     0.     9.   ]]\n"
+            "[[ 6.403  6.247  9.683]\n",
+            " [ 0.     1.406  3.922]\n",
+            " [-0.     0.     3.444]]\n"
           ]
         }
       ]
@@ -152,26 +223,26 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "d0e249db-99d5-4abc-c27e-0c0b1591b24f"
+        "outputId": "71ca80ea-313b-4249-e5b5-d470a8d3dcea"
       },
-      "execution_count": 8,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "A: \n",
-            "[[2. 0. 9.]\n",
-            " [9. 1. 7.]\n",
-            " [0. 0. 9.]]\n",
+            "[[4. 4. 9.]\n",
+            " [4. 3. 2.]\n",
+            " [3. 4. 6.]]\n",
             "Q:\n",
-            "[[ 0.21693046 -0.97618706  0.        ]\n",
-            " [ 0.97618706  0.21693046  0.        ]\n",
-            " [ 0.          0.          1.        ]]\n",
+            "[[ 0.62469505  0.06941056  0.77777778]\n",
+            " [ 0.62469505 -0.64204769 -0.44444444]\n",
+            " [ 0.46852129  0.76351617 -0.44444444]]\n",
             "R:\n",
-            "[[ 9.22   0.976  8.786]\n",
-            " [ 0.     0.217 -7.267]\n",
-            " [ 0.     0.     9.   ]]\n"
+            "[[ 6.403  6.247  9.683]\n",
+            " [ 0.     1.406  3.922]\n",
+            " [-0.    -0.     3.444]]\n"
           ]
         }
       ]
